@@ -1,3 +1,8 @@
+2006-06-13  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/gplt_x11.c: Move export selection flags outside the the
+	USE_MOUSE conditional code.  Bug #1505704
+
 2006-06-13  Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* configure.in src/Makefile.am src/makefile.awc src/makefile.all:
